Tinker with layout bug

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,6 +1,3 @@
-.login {
-  background: #d2d6de;
-}
 .user-panel {
   padding: 10px;
 }
